# coding-chatbox

./: .gitignore  Makefile.am  autogen.sh  build-flatpak.sh  com.endlessm.Coding.Chatbox.service.in  com.endlessm.Coding.Chatbox.xml  com.endlessm.CodingChatbox.json.in  com.endlessm.CodingChatbox.xml  configure.ac
data/: application.css  attachment-view.ui  chat-bubble-container.ui  chatbox-data.json  chatbox-message-group.ui  com.endlessm.Coding.Chatbox.data.gresource.xml  com.endlessm.Coding.Chatbox.desktop  com.endlessm.Coding.Chatbox.service.in  com.endlessm.CodingChatbox.data.gresource.xml  com.endlessm.CodingChatbox.desktop  com.endlessm.CodingChatbox.service.in  com.endlessm.Mission.Chatbox.data.gresource.xml  contact.ui  main.ui  message-pending-view.ui
data/icons/: Makefile.am
debian/: changelog  coding-chatbox.install  control  copyright  gir1.2-coding-chatbox-0.install  libcoding-chatbox-0-dev.install  libcoding-chatbox-0.install
lib/: Makefile.am  chatbox-utils.c  chatbox-utils.h
m4/: eos-eslint.m4
po/: Makevars  POTFILES.in  coding-chatbox.pot  es.po
src/: actor.js  com.endlessm.Coding.Chatbox.in  com.endlessm.Coding.Chatbox.src.gresource.xml  com.endlessm.CodingChatbox.in  com.endlessm.CodingChatbox.src.gresource.xml  com.endlessm.Mission.Chatbox.in  com.endlessm.Mission.Chatbox.src.gresource.xml  contact.js  containers.js  main.js  promiseHelpers.js  queue.js  service.js  state.js  timestamp.js  views.js
tests/js/: testTimestamps.js
